--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis Lugares - Costa Rica</title>
+    <title>Costa Rica a mi Manera</title>
+
+    <meta property="og:title" content="Costa Rica a mi Manera">
+    <meta property="og:description" content="Mapa personal para guardar y explorar lugares en Costa Rica.">
+    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjQ9ADzb_dnlNDhLgUoEUlexpbTnDUhmFboAN5nfYUETmdAPF70C6SvUwTC7qBuAQgLPCNqswsd_fCMtlGoujKQg9SOGABHkzkHE1T843j-d4xbPRGG3YAGFPz2SWiI7l01jBm9tpjrLFxO_rS4lZZ-RSbqQFEkMVQhyTvGAeP5EeU57ijd0xBWHkBdL64/w351-h530/250c9ces-1920.jpg">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
@@ -100,7 +106,7 @@
         <button id="toggle-list-btn" class="text-gray-600 hover:text-blue-600 p-2 rounded-full transition duration-150">
             <i class="fas fa-list fa-lg"></i>
         </button>
-        <h1 class="text-xl font-semibold text-gray-800">Mis Lugares CR</h1>
+        <h1 class="text-xl font-semibold text-gray-800">Costa Rica a mi Manera</h1>
         <div class="flex items-center gap-2">
             <button id="locate-me-btn" class="text-gray-600 hover:text-blue-600 p-2 rounded-full transition duration-150" title="Ubicarme">
                 <i class="fas fa-crosshairs fa-lg"></i>
@@ -477,7 +483,6 @@
             deletePlaceBtn.classList.remove('hidden'); // Muestra botón eliminar
 
             // Genera y asigna el enlace de Google Maps para "Cómo llegar"
-            // CORRECCIÓN: La URL de Google Maps debe ser diferente
             const directionsUrl = `https://www.google.com/maps/dir/?api=1&destination=${place.lat},${place.lng}`;
             modalDirectionsBtn.href = directionsUrl;
             modalDirectionsBtn.classList.remove('hidden'); // Muestra botón "Cómo llegar"
@@ -661,7 +666,6 @@
                     const marker = L.marker([place.lat, place.lng], { icon: createCustomIcon() }).addTo(map);
 
                     // Genera la URL de Google Maps para las direcciones (popup)
-                    // CORRECCIÓN: Usar URL para obtener direcciones
                     const directionsUrl = `https://www.google.com/maps/dir/?api=1&destination=${place.lat},${place.lng}`;
 
                     // Construye el contenido HTML para el popup del marcador
